Quick Favorites Lets you add multiple of the same item #58479

Closed
opened 2018-12-02 00:01:30 +01:00 by Stacey · 6 comments

System Information
Operating system: Windows 10
Graphics card: GTX 1080 Ti

Blender Version
Broken: 2.80 (sub 35), branch: blender2.8, commit date: 2018-11-30 22:29,

Short description of error
You can add the same action to the quick favorites menu multiple times.

Exact steps for others to reproduce the error

  1. Right click on the Toggle Overlays button and select Add to Quick Favorites.
  2. Hit Q, note that it is added.
  3. Repeat steps.

My expected behavior:
I actually expected my second click to be a "remove" not another "add".

**System Information** Operating system: Windows 10 Graphics card: GTX 1080 Ti **Blender Version** Broken: 2.80 (sub 35), branch: blender2.8, commit date: 2018-11-30 22:29, **Short description of error** You can add the same action to the quick favorites menu multiple times. **Exact steps for others to reproduce the error** 1. Right click on the Toggle Overlays button and select Add to Quick Favorites. 2. Hit Q, note that it is added. 3. Repeat steps. My expected behavior: I actually expected my second click to be a "remove" not another "add".
Author

Added subscriber: @Yecats

Added subscriber: @Yecats
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-20 11:25:08 +01:00
Member

Not exactly sure if this can be called a bug, but confirming for now and checking...

Not exactly sure if this can be called a bug, but confirming for now and checking...

This issue was referenced by 22474062b1

This issue was referenced by 22474062b1afb11634a1579ab5c5ce92a5beea85

Added subscriber: @capnm

Added subscriber: @capnm
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58479
No description provided.