Fix T58479: Quick Favorites Lets you add multiple of the same item

Reviewers: brecht

Maniphest Tasks: T58479

Differential Revision: https://developer.blender.org/D4135